package Diadoc.Api.Proto.Invoicing;

message ReceiptGenerationRequestV2 {
	required string MessageId = 1;
	required string AttachmentId = 2;
	required bytes SignerContent = 3;
}